finished button groups

--- a/buttons.html
+++ b/buttons.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-html lang="en">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,5 +7,74 @@ html lang="en">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
+
+  <!-- Button Colors and types-->
+
+<button class="btn btn-primary">Primary</button>
+<button class="btn btn-secondary">Secondary</button>
+<button class="btn btn-success">Success</button>
+<button class="btn btn-warning">
+  Warning</button>
+<button class="btn btn-danger">Danger</button>
+<button class="btn btn-info">Info</button>
+<button class="btn btn-light"Light></button>
+<button class="btn btn-dark">Dark</button>
+<button class="btn btn-link">Link</Link></button>
+<br>
+
+<a href="#" class="btn btn-warning">Anchor Tag Button</a>
+<br>
+
+<button class="btn btn-lg btn-success">btn-lg, btn-success</button>
+<button class="btn btn-sm btn-info">btn-sm btn-info</button>
+<br>
+
+<button class="btn btn-outline-primary">primary</button>
+<button class="btn btn-outline-dark">dark</button>
+<button class="btn btn-outline-success">success</button>
+<br>
+
+<!--Button Groups-->
+
+<div class="btn-group">
+  <button class="btn btn-primary">btn.btn.primary</button>
+  <button class="btn btn-outline-dark">btn.btn.outline.dark</button>
+  <button class="btn btn-warning">btn.btn.warning</button>
+</div>
+<br>
+
+<!-- vertical buttons-->
+
+<div class="btn-group-vertical">
+  <button class="btn btn-outline-primary">Outline primary</button>
+  <button class="btn btn-outline-danger">Outline danger</button>
+  <button class="btn btn-outline-success">Outline success</button>
+</div>
+
+<!-- more button groups -->
+
+<br>
+<div class="btn-group-vertical">
+  <input type="radio" class="btn-check"  name="btnradio" id="btnradio1" checked>
+  <label for="btnradio1" class="btn btn-outline-primary">radio 1</label>
+  <input type="radio" class="btn-check"  name="btnradio" id="btnradio1">
+  <label for="btnradio2" class="btn btn-outline-primary">radio 2</label>
+  <input type="radio" class="btn-check"  name="btnradio" id="btnradio1">
+  <label for="btnradio3" class="btn btn-outline-primary">radio 3</label>
+</div>
+
+<br>
+
+<div class="btn-group-vertical">
+  <input type="checkbox" class="btn-check"  name="btncheck" id="btncheck1" checked>
+  <label for="btncheck1" class="btn btn-outline-primary">check 1</label>
+  <input type="checkbox" class="btn-check"  name="btncheck" id="btncheck2">
+  <label for="btncheck2" class="btn btn-outline-primary">check 2</label>
+  <input type="checkbox" class="btn-check"  name="btncheck" id="btncheck3">
+  <label for="btncheck3" class="btn btn-outline-primary">check 3</label>
+</div>
+
+
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-</body>
+</body> 
