finished rows and columns

--- a/containers.html
+++ b/containers.html
@@ -10,29 +10,41 @@
   <!-- .container  -->
 
   <div class="container bg-success">xsmall</div>
+  <br>
+  <br>
 
   <!-- .container-sm -->
   <div class="container.sm bg-info">small</div>
+<br>
+<br>
 
   <!-- .container-md  -->
 
   <div class="container.md bg-warning">medium</div>
+  <br>
+  <br>
 
   <!-- .container-lg -->
 
   <div class="container.lg bg-success">large</div>
+<br>
+<br>
 
   <!-- .container-xl -->
 
   <div class="container.xl bg-info">xtra large</div>
+  <br>
+  <br>
 
   <!-- .container-xxl -->
 
   <div class="container.xxl bg-warning">xxl</div>
+<br>
+<br>
 
   <!-- .container-fluid -->
 
-  <div class="container.fluid">fluid</div>
+  <div class="container.fluid bg-danger">fluid</div>
 
 
 
