--- a/grids.html
+++ b/grids.html
@@ -186,13 +186,23 @@
   </div>
 </div>
 
+<!-- inline  -->
 
+<div class="d-inline my5 bg-primary">
+inline
+</div>
 
+<!-- block -->
 
+<div class="d-block my-5 bg-danger">block</div>
 
+<!-- inline block -->
 
+<div class="d-inline-block my-5 bg-warning text-white">inline-block</div>
 
+<!-- none -->
 
+<div class="d-sm-none d-md-block my-5 bg-primary text-white">none</div>
 
 
 
