--- a/grids.html
+++ b/grids.html
@@ -188,21 +188,34 @@
 
 <!-- inline  -->
 
-<div class="d-inline my5 bg-primary">
-inline
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+</head>
+<body>
+ <!-- inline -->
+ <div class="d-inline my-5 bg-primary">inline</div>
+ <!-- block -->
+ <div class="d-block my-5 bg-danger">block</div>
+ <!-- inline-block -->
+ <div class="d-inline-block my-5 bg-secondary">inline-block</div>
+ <!-- none -->
+<div class="d-sm-none d-md-block bg-success my-5">none</div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
+</body>
+</html>
 
-<!-- block -->
 
-<div class="d-block my-5 bg-danger">block</div>
 
-<!-- inline block -->
 
-<div class="d-inline-block my-5 bg-warning text-white">inline-block</div>
 
-<!-- none -->
 
-<div class="d-sm-none d-md-block my-5 bg-primary text-white">none</div>
 
 
 
@@ -213,8 +226,7 @@ inline
 <br>
 <br>
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 
 </html>
